--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,11 +1,11 @@
 <div class="container_menu-bar">
   <ul>
 
-    <li><a href="">Home</a></li>
+    <li class="menu"><a href="">Home</a></li>
     <li><span>•</span></li>
-    <li><a href="">About</a></li>
+    <li  class="menu"><a href="">About</a></li>
     <li><span>•</span></li>
-    <li><a href="">Arts</a></li>
+    <li  class="menu"><a href="">Arts</a></li>
   </ul>
 
 </div>
