criada pagina about e arts

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -3,9 +3,9 @@
 
     <li class="menu"><a href="">Home</a></li>
     <li><span>•</span></li>
-    <li  class="menu"><a href="">About</a></li>
+    <li  class="menu"><a href="/about">About</a></li>
     <li><span>•</span></li>
-    <li  class="menu"><a href="">Arts</a></li>
+    <li  class="menu"><a href="/arts">Arts</a></li>
   </ul>
 
 </div>
