--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -4,7 +4,7 @@
       <img src="{{photoCover}}">
     </div>
     <div  class="small-card_title">
-      <h1>{{cardTitle}}</h1>
+      <h1><a [routerLink]="['arts',id]">{{cardTitle}}</a></h1>
     </div>
   </div>
   <div class="container_small-card_separator">
