--- a/src/app/pages/arts/arts.component.css
+++ b/src/app/pages/arts/arts.component.css
@@ -2,10 +2,13 @@
   width: 700px;
   height: 100%;
   margin: 20px;
-  align-items: center;
+
+
+}
+.container{
+  display: flex;
   justify-content: center;
 }
-
 .arts_photo > img{
   width: 300px;
   height: 300px;
