--- a/src/app/pages/arts/arts.component.html
+++ b/src/app/pages/arts/arts.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="container_arts">
   <div class="arts_photo">
     <img src="{{photoCover}}" alt="exposicao-vincent" height="200px" width="300px">
@@ -12,4 +13,4 @@
     </p>
   </div>
 </div>
-
+</div>
