--- a/src/app/pages/arts/arts.component.html
+++ b/src/app/pages/arts/arts.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="container_arts">
   <div class="arts_photo">
-    <img src="{{photoCover}}" alt="exposicao-vincent" height="200px" width="300px">
+    <img src="{{photoCover}}" alt="" height="200px" width="300px">
   </div>
   <a href="" target="_blank">
     <div  class="arts_title">
